--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, world! 👋</h1>
+  <h1>This is my GitHub Pages site at <strong>dvithoul.github.io</strong>.</h1>
   <p>This is my GitHub Pages site at <strong>dvithoul.github.io</strong>.</p>
 </body>
 </html>
